chore: implement basic db migration schema, clean up inconsistencies in schema
