# api/openapi.yaml
@@ -9,9 +9,9 @@ servers:
   - url: https://gocrud-book-store-service.grntlrduck.cloud/api/v1
 tags:
   - name: discount
-    description: Avaerything about the discount codes in the store
+    description: Everything about the discount codes in the store
   - name: author
-    description: Averything about the book authors associated with the books
+    description: Everything about the book authors associated with the books
   - name: book
     description: Everything about the books in the store
   - name: genre
@@ -65,14 +65,14 @@ paths:
         "422":
           description: Validation exception
         "500":
-          description: server error
+          description: Server error
 
   /discounts/{discountId}:
     get:
       tags:
         - discount
       summary: Finds discount by Id
-      description: Returns discounbt for given Id
+      description: Returns discount for given Id
       operationId: GetDiscountById
       parameters:
         - name: discountId
@@ -114,7 +114,7 @@ paths:
         "400":
           description: Invalid discountId value
         "404":
-          description: Discont not found
+          description: Discount not found
         "500":
           description: Server error
 
@@ -379,17 +379,17 @@ paths:
         "500":
           description: Server error
 
-  /books/findbyGenereId:
+  /books/findByGenreId:
     get:
       tags:
         - book
-      summary: Finds Books by GenereId
-      description: Multiple GenereIds can be provided with comma separated strings.
-      operationId: GetBooksByGeneres
+      summary: Finds Books by GenreId
+      description: Multiple GenreIds can be provided with comma separated strings.
+      operationId: GetBooksByGenres
       parameters:
         - name: genres
           in: query
-          description: Generef to filter by
+          description: Genres to filter by
           required: true
           explode: false
           schema:
@@ -410,12 +410,12 @@ paths:
         "500":
           description: Server error
 
-  /books/findbyStatus:
+  /books/findByStatus:
     get:
       tags:
         - book
       summary: Finds Books by status
-      description: Multiple GenereIds can be provided with comma separated strings.
+      description: Multiple status values can be provided with comma separated strings.
       operationId: GetBooksByStatus
       parameters:
         - name: status
@@ -445,7 +445,7 @@ paths:
     post:
       tags:
         - genre
-      summary: Add a new genere to the store
+      summary: Add a new genre to the store
       description: Add a new genre to the store
       operationId: AddGenre
       requestBody:
@@ -493,20 +493,20 @@ paths:
         "400":
           description: Invalid parameters
         "404":
-          description: Genr not found
+          description: Genre not found
         "500":
           description: Server error
 
     delete:
       tags:
         - genre
-      summary: Deletes a genere
-      description: delete a genere
+      summary: Deletes a genre
+      description: Delete a genre
       operationId: DeleteGenre
       parameters:
         - name: genreId
           in: path
-          description: GenereId to delete
+          description: GenreId to delete
           required: true
           schema:
             type: string
@@ -514,7 +514,7 @@ paths:
         "200":
           description: Successful operation
         "400":
-          description: Invalid genereId value
+          description: Invalid genreId value
         "404":
           description: Genre not found
         "500":
@@ -634,7 +634,7 @@ paths:
         - store
       summary: Delete purchase order by Id
       description: Delete a given, will set the order status to canceled
-      operationId: deleteOrder
+      operationId: DeleteOrder
       parameters:
         - name: orderId
           in: path
@@ -849,6 +849,8 @@ components:
         percentage_discount:
           type: integer
           format: int32
+          minimum: 0
+          maximum: 100
         valid_from:
           type: string
           format: date
@@ -973,6 +975,8 @@ components:
         percentage_discount:
           type: integer
           format: int32
+          minimum: 0
+          maximum: 100
         valid_from:
           type: string
           format: date
@@ -1011,7 +1015,7 @@ components:
           $ref: "#/components/schemas/Address"
         shipping_address_override:
           $ref: "#/components/schemas/Address"
-      required: [books, customer_id, billing_address, shipping_date, quantity]
+      required: [books, customer_id, billing_address, shipping_date]
 
     Order:
       type: object
@@ -1044,16 +1048,7 @@ components:
             - shipped
             - delivered
             - canceled
-      required:
-        [
-          id,
-          books,
-          customer_id,
-          billing_address,
-          shipping_date,
-          quantity,
-          status,
-        ]
+      required: [id, books, customer_id, billing_address, shipping_date, status]
 
     OrderedBook:
       type: object
@@ -1071,7 +1066,7 @@ components:
       properties:
         shipping_date:
           type: string
-          format: date-time
+          format: date
         status:
           type: string
           description: Order Status
